# PWrLabs

./: .gitignore  DataAnalyser.html  Main.html  QuestionnaireLoader.html  README.md  allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-tree.html  package-frame.html  package-summary.html  package-tree.html
JavaLab/doc/: Questionnaire.html  QuestionnaireCollection.html  QuestionnaireMismatchException.html  allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  (+7 more)
Lab-Project/: main.py  mastermind.py
Lab1/: script.sh  script2.sh
Lab10Task1/: JavaWS  index.html  my-file.jnlp  myCertificate.csr
Lab10Task2/: pom.xml
Lab11Task1/: CMakeLists.txt  library.cpp  library.h  library.hpp  main.cpp
Lab11Task1V2/: pom.xml
Lab11Task2/: pom.xml
Lab12Task1/: pom.xml
Lab13Task1/: pom.xml
Lab14Task1/: pom.xml
Lab2/: script1.sh  script2.sh
Lab2Task1/: data.res  data2.res  data3.res
Lab5Task1V3/: build.gradle  settings.gradle
Lab5Task1V6/: pom.xml
Lab7Task1/: dependency-reduced-pom.xml  pom.xml
Lab8Task1/: pom.xml
Lab8Task1V2/: pom.xml
Lab8Task1V3/: pom.xml
Lab9Task1/: pom.xml  test.txt
MavenTask/: pom.xml
Python1/: calc.py
Selenium/: file.py  saved.html
index-files/: index-1.html  index-2.html  index-3.html  index-4.html  index-5.html
ormaniecapp/: pom.xml
untitled/: Offer.py  app.py  data.csv  data_holder.py
weatherScritp/: UnitySetup-2017.3.1f1  Untitled.ipynb  ipython.py  main.py  notatnikPrzykladowy.html  notepad.ipynb  test.py
(+156 files in other folders)
